--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -11,6 +11,11 @@ on:
    - cron: '15 6 * * SUN'
   
   workflow_dispatch:
+    inputs:
+      environment:
+        type: environment
+        required: true
+        description: "Which environment to deploy to"
 
 jobs:
   Build:
@@ -23,3 +28,38 @@ jobs:
       - run: |
           echo 'Here is a list of the files in this directory...'
           tree
+  Test:
+    runs-on: ubuntu-latest
+    needs: [ Build ]
+    environment: Test
+    if: github.event_name == 'workflow_dispatch'
+    steps:
+      - run: echo 'Testing...'
+
+  Load_Test:
+    runs-on: ubuntu-latest
+    needs: [ Build ]
+    environment: Load-Test
+    if: github.event_name == 'workflow_dispatch'
+    steps:
+      - run: echo 'Load testing...'
+
+  Prod:
+    runs-on: ubuntu-latest
+    needs: [ Test, Load_Test ]
+    environment: 
+      name: Production
+      url: https://writeabout.net
+    if: github.event.inputs.environment == 'Production'
+    steps:
+      - run: |
+          echo 'Step 1 deploying'
+          sleep 2
+          echo 'Step 2 deploying'
+          sleep 2
+          echo 'Step 3 deploying'
+          sleep 2
+          echo 'Step 4 deploying'
+          sleep 2
+          echo 'Step 5 deploying'
+    
