--- a/.github/workflows/reuse.yml
+++ b/.github/workflows/reuse.yml
@@ -4,12 +4,14 @@ on: [ workflow_dispatch ]
 
 jobs:
   call-workflow:
-    - runs-on: ubuntu-latest
-    - uses: ./github/workflows/reusable.yml
-      with:
-        who-to-greet: "@c4llmeco4ch"
+    runs-on: ubuntu-latest
+    steps:
+      - uses: ./github/workflows/reusable.yml
+        with:
+          who-to-greet: "@c4llmeco4ch"
 
   use-output:
-    - runs-on: ubuntu-latest
-    - needs: [ call-workflow ]
-    - run: echo "This was run at ${{ needs.call-workflow.outputs.current-time }}
+    runs-on: ubuntu-latest
+    needs: [ call-workflow ]
+    steps:
+      - run: echo "This was run at ${{ needs.call-workflow.outputs.current-time }}
